# varan

./: .gitignore  TODO.txt  build.sh  code_generator.hs  compiler.hs  grammar.hs  model.hs  osfuncs.h  parser.hs  run_tests.sh  stack.yaml  stdlib.c  stdlib.hs  stdlib.vr  util.hs  varan  varan.cabal
examples/: arithmetic.vr  continue.vs  fizzbuzz.vr  fizzbuzz_alternate.vr  function_calls.vr  user_defined_types.vr
lib/: memory.c  memory.h  memory_test.c  osfuncs.c  osfuncs.h  varan_std.vr
src/: CodeGenerator.hs  Compiler.hs  Grammar.hs  Osfuncs.hs  Parser.hs
test/: function_calls.vr  memory_test.c  user_defined_types.vr
test/includes/: a.vr  include_test.vr
