name: varan
version: 0.0.1
synopsis: A toy programming language
homepage: https://github.com/plilja/varan
license: MIT
author: Patrik Lilja 
maintainer: patlil@kth.se 
build-type: Simple
cabal-version: >=1.10

executable compiler 
  main-is:             Compiler.hs
  build-depends:
      base                 >= 4.6
    , haskeline            >= 0.7.1.2
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.5
  default-language:    Haskell2010
  hs-source-dirs:      src
